--- a/index.html
+++ b/index.html
@@ -55,7 +55,37 @@
 				</div>
 			</section>
 			<!--features-->
-			<section class="features"></section>
+			<section class="features">
+				<div class="feat-details">
+					<div class=feat-title>
+						<div class="vertical-line"></div>
+						<h1>Features you will love & enjoy</h1>
+					</div>
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+					<div class="feat-main">
+						<div class="feat-para">
+							<h2>Dexktop & Mobile Version</h2>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+						<div class="feat-para">
+							<h2>Drag & Drop Builder</h2>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+						<div class="feat-para">
+							<h2>Awesome Modern Design</h2>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+						<div class="feat-para">
+							<h2>Super Easy to Edit</h2>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+					</div>
+				</div>
+				<div class="img-button">
+					<img src="images/architect.png">
+					<div><span class="ten">10+ Year</span><br><span class="experience">Experience</span></div>
+				</div>
+			</section>
 			<!--facts-->
 			<section class="facts"></section>
 			<!--sponsors-->
