facts section added, animation added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,34 @@
 				</div>
 			</section>
 			<!--facts-->
-			<section class="facts"></section>
+			<section class="facts">
+				<div class="facts-details">
+					<h2>Some Facts</h2>
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+				</div>
+				<div class="facts-row">
+					<div class="facts-img">
+						<img src="images/icons/ribon.png">
+						<div class="facts-number">54</div>
+						<div class="facts-name">Awards Winning</div>
+					</div>
+					<div class="facts-img">
+						<img src="images/icons/projects.png">
+						<div class="facts-number">1458</div>
+						<div class="facts-name">Projects Finished</div>
+					</div>
+					<div class="facts-img">
+						<img src="images/icons/customers.png">
+						<div class="facts-number">590</div>
+						<div class="facts-name">Clients Worked</div>
+					</div>
+					<div class="facts-img">
+						<img src="images/icons/email.png">
+						<div class="facts-number">22578</div>
+						<div class="facts-name">Email Send</div>
+					</div>
+				</div>
+			</section>
 			<!--sponsors-->
 			<section class="sponsors"></section>
 			<!--footer-->
