sponsors section added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		
 		<!--Google Font-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
 		
 		<title>g3-architects</title>
 	</head>
@@ -116,7 +116,19 @@
 				</div>
 			</section>
 			<!--sponsors-->
-			<section class="sponsors"></section>
+			<section class="sponsors">
+				<div class="sponsor-title">
+					<h2>Our Sponsors</h2>
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+				</div>
+				<div class="sponsor-icons">
+					<img src="images/sponsors/spotify.png">
+					<img src="images/sponsors/amazon.png">
+					<img src="images/sponsors/google.png">
+					<img src="images/sponsors/telerama.png">
+					<img src="images/sponsors/figma.png">
+				</div>
+			</section>
 			<!--footer-->
 			<section class="footer"></section>
 		</main>
