--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
 				</div>
 			</section>
 			<!--footer-->
-			<section class="footer"></section>
+			<section class="footer">
+				<div class="footer-text">
+					All rights reserved copyright@2023 startup landing page design
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
