--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<br><br>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in</p>
 				<p>some form, by injected humour, or randomised words which don't look even</p>
-				<button>Explore More</button>
+				<button><a href="">Explore More</a></button>
 				<img src="images/banner.png"></img>
 			</section>
 			<!--grid-quick-->
@@ -51,7 +51,7 @@
 					<h1><span class="quick-list">Quick list</span> <span class="of-our">of Our</span></h1>
 					<h1><span class="feat">Features</span></h1>
 					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-				<button>Explore More</button>
+					<button><a href="">Explore More</a></button>
 				</div>
 			</section>
 			<!--features-->
@@ -134,6 +134,15 @@
 				<div class="footer-text">
 					All rights reserved copyright@2023 startup landing page design
 				</div>
+			</section>
+			<!--extra-->
+			<section class="extra">
+					<p>Login Here!</p>
+					<form class="login-form">
+						<input type="email" placeholder="Your Email" required><br>
+						<input type="password" placeholder="Password" required><br>
+						<input type="submit">
+					</form>
 			</section>
 		</main>
 	</body>
